--- a/Frontend/templates/pages/map.html
+++ b/Frontend/templates/pages/map.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar bg-body-tertiary">
     <div class="container-fluid fixed-top" style="background-color: #3DDABE;  padding: 10px;">
-        <a class="navbar-brand" style="color: white" href="./homepage.html">
+        <a class="navbar-brand" style="color: white" href="./index.html">
             <b>Servify</b>
         <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         </a>
