--- a/Frontend/templates/pages/index.html
+++ b/Frontend/templates/pages/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="/templates/styles/index.css">
     
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
     <div class="container-fluid fixed-top" style="background-color: #3DDABE;  padding: 10px;">
-        <a class="navbar-brand" style="color: white" href="index.html">
+        <a class="navbar-brand" style="color: white" href="/templates/pages/index.html">
             <b>Servify</b>
-        <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+        <img src="images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         </a>
          <form class="ms-auto">
-          <a href="./services.html" class="btn btn-outline-success service-btn"><b>Services</b></a>
+          <a href="/templates/pages/services.html" class="btn btn-outline-success service-btn"><b>Services</b></a>
         </form>
     </div>
     </nav>  
