--- a/Frontend/templates/pages/index.html
+++ b/Frontend/templates/pages/index.html
@@ -28,21 +28,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../../images/pipes.jpg" class="d-block w-100" alt="...">
+            <img src="/images/pipes.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Connect</h5>
               <p>Beyond Self, Above Service.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../../images/electrician.jpg" class="d-block w-100" alt="...">
+            <img src="/images/electrician.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Serve</h5>
               <p>Your Urgency, Our Priority.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../../images/plumber.jpg" class="d-block w-100" alt="...">
+            <img src="/images/plumber.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Sustain</h5>
               <p>Sustaining Homes, Enriching Community.</p>
@@ -80,7 +80,7 @@
               <p> For enquiries about our services, please contact our Chief of Operations Howell Chan at <u>howellchan@servify.com</u></p>
             </div>
             <div class="col-md-6 content-box" style="background-color: #ffffff;">
-              <img src="../../images/handyman2.jpg" alt="" class="img-fluid rounded">
+              <img src="/images/handyman2.jpg" alt="" class="img-fluid rounded">
             </div>
           </div>
 
