--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -54,7 +54,7 @@
                             </h3>  
                           </div>
                           <div class="col-12 col-md-6 mt-5 text-center d-flex flex-column ">
-                            <label>
+                            <!-- <label>
                               <input type="radio" name="timing" required>
                               <span class="time-slot"></span>
                             </label>
@@ -65,7 +65,7 @@
                             <label>
                               <input type="radio" name="timing" required>
                               <span class="time-slot"></span>
-                            </label>
+                            </label> -->
                             <div class="btn-group-vertical" role="group" aria-label="Vertical radio toggle button group">
                               <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio1" autocomplete="off" checked>
                               <label class="btn btn-outline-danger" for="vbtn-radio1">07:00 to 11:00</label>
