--- a/Frontend/templates/pages/services.html
+++ b/Frontend/templates/pages/services.html
@@ -163,7 +163,7 @@
                     <div class="card text-center">
                         <div class="card-body">
                             <img src="../../images/carpentary.png" alt="Service Icon" class="service-icon">
-                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Carpentary</b></a>
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Carpentry</b></a>
                             <p class="mt-3"><i>Transform your space with expert carpenter services.</i></p>
                         </div>
                     </div>
