--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -68,11 +68,11 @@
                             </label> -->
                             <div class="btn-group-vertical" role="group" aria-label="Vertical radio toggle button group">
                               <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio1" autocomplete="off" checked>
-                              <label class="btn btn-outline-danger" for="vbtn-radio1">07:00 to 11:00</label>
+                              <label class="btn btn-outline-success" for="vbtn-radio1">07:00 to 11:00</label>
                               <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio2" autocomplete="off">
-                              <label class="btn btn-outline-danger" for="vbtn-radio2">12:00 to 16:00</label>
+                              <label class="btn btn-outline-success" for="vbtn-radio2">12:00 to 16:00</label>
                               <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio3" autocomplete="off">
-                              <label class="btn btn-outline-danger" for="vbtn-radio3">17:00 to 21:00</label>
+                              <label class="btn btn-outline-success" for="vbtn-radio3">17:00 to 21:00</label>
                             </div>
                           </div>
                         </div>
