--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -1,116 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Request</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../styles/request.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../styles/index.css">
+    
 </head>
-
-
 <body>
     <nav class="navbar bg-body-tertiary">
     <div class="container-fluid fixed-top" style="background-color: #3DDABE;  padding: 10px;">
-        <a class="navbar-brand" style="color: white" href="./index.html">
+        <a class="navbar-brand" style="color: white" href="index.html">
             <b>Servify</b>
         <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         </a>
+         <form class="ms-auto">
+          <a href="./services.html" class="btn btn-outline-success service-btn"><b>Services</b></a>
+        </form>
     </div>
     </nav>  
-
-    <main>
-        <section class="bg-light py-5">
-            <h2 class="text-center mt-5">Provide us with more details</h2>
-            <hr class="green-line">
-            <div class="row mt-4 content-box">
-              <div class="col-12 col-md-8"> <!-- Changed to col-12 for small screens and col-md-8 for medium and up -->
-                  <!-- Image Upload Container -->
-                  <div class ="everything">
-                  <div class="image-upload-container card-like mb-4">
-                      <div class="row">
-                          <div class="col-12 col-md-6 text-center d-flex flex-column justify-content-center">
-                            <h1>Attach a picture</h1>
-                            <h3>
-                              Please upload clear photos for a quick handyman selection!
-                            </h3>
-                          </div>
-                          <div class="col-12 col-md-6 text-center d-flex flex-column">
-                            <div id="imagePreview" class="image-preview mt-3"></div>
-                            <input type="file" id="imageUpload" accept="image/*" class="d-none">
-                            <button id="uploadButton" class="upload-button mt-3">Upload Image</button>
-                          </div>
-                      </div>
-                  </div>
-                  <!-- Choose Timing Container -->
-                  <div class="image-upload-container card-like mb-4">
-                      <div class="row">
-                          <div class="col-12 col-md-6 text-center d-flex flex-column justify-content-center">
-                            <h1>Choose a Timing</h1>
-                            <h3>
-                            When do you need our service?
-                            </h3>  
-                          </div>
-                          <div class="col-12 col-md-6 mt-5 text-center d-flex flex-column ">
-                            <!-- <label>
-                              <input type="radio" name="timing" required>
-                              <span class="time-slot"></span>
-                            </label>
-                            <label>
-                              <input type="radio" name="timing" required>
-                              <span class="time-slot"></span>
-                            </label>
-                            <label>
-                              <input type="radio" name="timing" required>
-                              <span class="time-slot"></span>
-                            </label> -->
-                            <div class="btn-group-vertical" role="group" aria-label="Vertical radio toggle button group">
-                              <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio1" autocomplete="off" checked>
-                              <label class="btn btn-outline-success" for="vbtn-radio1">07:00 to 11:00</label>
-                              <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio2" autocomplete="off">
-                              <label class="btn btn-outline-success" for="vbtn-radio2">12:00 to 16:00</label>
-                              <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio3" autocomplete="off">
-                              <label class="btn btn-outline-success" for="vbtn-radio3">17:00 to 21:00</label>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-12 col-md-4"> <!-- Changed to col-12 for small screens and col-md-4 for medium and up -->
-                <img src="../../images/plumberman.png" alt="Man Image" class="img-fluid">
-              </div>
-          </div> 
+    <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-            <div class="text-center mt-5">
-              <a class="btn btn-success submit-button" id="submitButton" href="map.html" disabled><b>I NEED HELP</b></a>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../../images/pipes.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Connect</h5>
+              <p>Beyond Self, Above Service.</p>
             </div>
-          </section>
-          <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-            <div class="progress-bar progress-bar-striped progress-bar-animated custom-progress-bar" style="width: 50%"></div>
           </div>
-    </main>
+          <div class="carousel-item">
+            <img src="../../images/electrician.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Serve</h5>
+              <p>Your Urgency, Our Priority.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../../images/plumber.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Sustain</h5>
+              <p>Sustaining Homes, Enriching Community.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    <section class="bg-light py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 mission content-box" style="background-color: #ffffff;">
+              <h3>Mission</h3>
+              <p> Leveraging on a curated network of service providers, Servify aims to eliminate the friction traditionally associated with locating and engaging professional assistance.</p>
+              <p> Our mission is to provide an efficient, one-stop solution for those in urgent need of professional services by centralising a diverse range of services within a single, user-friendly digital ecosystem. </p>
+              <hr class="my-4">
+              <h3 class="mt-4">Servify's Offerings</h3>
+              <p> Our services can be performed at residential homes, commercial offices, industrial facilities, and more! Expect only top class services from our highly skilled handymen.</p>
+              <p> We are offering services in the following domains:</p>
+              <ul>
+                <li>Cleaning</li>
+                <li>Repair & Maintenance</li>
+                <li>Plumbing</li>
+              </ul>
+              <hr class="my-4">
+              <h3 class="mt-4">Further Enquiries</h3>
+              <p> For enquiries about our services, please contact our Chief of Operations Howell Chan at <u>howellchan@servify.com</u></p>
+            </div>
+            <div class="col-md-6 content-box" style="background-color: #ffffff;">
+              <img src="../../images/handyman2.jpg" alt="" class="img-fluid rounded">
+            </div>
+          </div>
+
+          <hr class="my-5">
+          <h2 class="text-center mt-5"> Testimonials </h2>
+
+          <div class="row mt-2 content-box">
+            <div class="col-md-4">
+              <div class="card text-center">
+                <div class="card-body">
+                  <p class="card-text">"Excellent platform for getting urgent services, it literally saved my house from flooding!"</p>
+                  <h5 class="card-title">- Aryan Garg</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card text-center">
+                <div class="card-body">
+                  <p class="card-text">"Servify has revolutionised the way we obtain services, a true game-changer in accessibility"</p>
+                  <h5 class="card-title">- Angie Wong</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card text-center">
+                <div class="card-body">
+                  <p class="card-text">"Had a termite infestation which was saved only by the great handymen found through Servify."</p>
+                  <h5 class="card-title">- Cheng Lin</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
 
     <footer class="bg-dark text-white">
-        <div class="container-fluid" style="padding: 5px ;">
-            <div>
-                <h5 class="text-center"><b>Servify</b></h5>
-                <p class="text-center"><i>Your one-stop solution for professional services.</i></p>
-            </div>
-        </div>
+      <div class="container-fluid" style="padding: 5px ;">
+          <div>
+              <h5 class="text-center"><b>Servify</b></h5>
+              <p class="text-center"><i>Your one-stop solution for professional services.</i></p>
+          </div>
+      </div>
     </footer>
-
-    <div id="loading-popup" class="loading-popup">
-      <div class="loading-spinner"></div>
-      <div class="loading-text">Finding a service provider for you!...</div>
-    </div>
   
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script src="../script/request.js" type="module"></script>
-    
 </body>
 </html>
