--- a/Frontend/templates/pages/confirmation.html
+++ b/Frontend/templates/pages/confirmation.html
@@ -19,7 +19,15 @@
             padding: 20px;
         }
 
-        .green-box {
+        .green-box1 {
+            background-color: #4effd9;
+            border-radius: 15px;
+            padding: 20px;
+            max-width: 100%;
+            max-height: 200px; 
+            overflow: hidden; 
+        }
+        .green-box2 {
             background-color: #30e7c6;
             border-radius: 15px;
             padding: 20px;
@@ -27,8 +35,14 @@
             max-height: 200px; 
             overflow: hidden; 
         }
+        .green-box1 p {
+            margin: 0;
+            font-size: 1.5em;
+            font-weight: 500;
+            text-align: left;
+        }
 
-        .green-box p {
+        .green-box2 p {
             margin: 0;
             font-size: 1.5em;
             font-weight: 500;
@@ -39,7 +53,7 @@
             color: #27a891;
             text-align: center;
         }
-
+        
         
         @media (max-width: 768px) {
             .content-box {
@@ -55,6 +69,18 @@
                 font-size: 1.2em;
             }
         }
+        .underlined-title {
+            display: block;
+            text-align: center;
+        }
+
+        .green-line {
+            display: block;
+            width: 50px; /* Adjust width as needed */
+            height: 2px;
+            background-color: #30e7c6;
+            margin: 10px auto 0;
+        }
     </style>
 </head>
 <body>
@@ -69,31 +95,32 @@
 
     <main>
         <section class="bg-light py-5">
-            <h2 class="text-center mt-5">YOU HAVE CONFIRMED THE ORDER!</h2>
+            <h1 class="text-center mt-5 underlined-title">YOU HAVE <span>CONFIRMED</span> THE ORDER!</h1>
+            <div class="green-line"></div>
     
             <div class="row mt-4 content-box">
                 <div class="col-md-8">
                     <!-- Confirmation Details Container -->
-                    <div class="green-box card-like mb-4">
-                        <div class="row">
-                            <div class="col-md-6 text-container">
-                                <div>
-                                    <p><u>Confirmed</u></p>
-                                    <p>Name</p>
-                                    <p>Price</p>
-                                    <p>Serviced</p>
+                        <div class="green-box1 card-like mb-4">
+                            <div class="row">
+                                <div class="col-md-6 text-container">
+                                    <div>
+                                        <p><u>Confirmed</u></p>
+                                        <p>Name</p>
+                                        <p>Price</p>
+                                        <p>Serviced</p>
+                                    </div>
                                 </div>
-                                <a href="./index.html" class="custom-link">View Order</a>
-                            </div>
-                            <div class="col-md-6 text-center">
-                                <div class="image-container">
-                                        <img src="../../images/renovation.png" alt="Image" class="img-fluid">
+                                <div class="col-md-6 text-center">
+                                    <div class="image-container">
+                                        <img src="../../images/up.png" alt="Image" class="img-fluid">
+                                    </div>
+                                    <a href="./index.html" class="custom-link">View Order</a>
                                 </div>
                             </div>
                         </div>
-                    </div>
                     <!-- Request Details Container -->
-                    <div class="green-box card-like mb-4">
+                    <div class="green-box2 card-like mb-4">
                         <div class="row">
                             <div class="col-md-6 text-container">
                                 <div>
