--- a/Frontend/templates/pages/confirmation.html
+++ b/Frontend/templates/pages/confirmation.html
@@ -24,7 +24,7 @@
             border-radius: 15px;
             padding: 20px;
             max-width: 100%;
-            max-height: 220px; 
+            max-height: 250px; 
             overflow: hidden; 
         }
         .green-box2 {
@@ -32,10 +32,9 @@
             border-radius: 15px;
             padding: 20px;
             max-width: 100%;
-            max-height: 220px; 
+            max-height: 250px; 
             overflow: hidden; 
         }
-        
         .green-box1 p {
             margin: 0;
             font-size: 1.5em;
@@ -95,9 +94,9 @@
                                 <div class="col-md-6 text-container">
                                     <div>
                                         <p><u>Confirmed</u></p>
-                                        <p>Name:</p>
-                                        <p>Price: $36</p>
-                                        <p>Serviced 1 time</p>
+                                        <p>Name</p>
+                                        <p>Price</p>
+                                        <p>Serviced</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 text-center">
@@ -116,7 +115,7 @@
                                     <p><u>Request</u></p>
                                     <p>Service Requested:</p>
                                     <p>Time:</p>
-                                    <p>Location:</p>                   
+                                    <p>Location:</p>                     
                                 </div>
                             </div>
                         </div>
@@ -143,8 +142,6 @@
   
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../script/confirmation.js"></script>
-
 
 </body>
 </html>
