--- a/Frontend/templates/pages/confirmation.html
+++ b/Frontend/templates/pages/confirmation.html
@@ -95,8 +95,8 @@
                                     <div>
                                         <p><u>Confirmed</u></p>
                                         <p>Name</p>
-                                        <p>Price</p>
-                                        <p>Serviced</p>
+                                        <p>Price: $36</p>
+                                        <p>Serviced 1 time</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 text-center">
@@ -115,7 +115,7 @@
                                     <p><u>Request</u></p>
                                     <p>Service Requested:</p>
                                     <p>Time:</p>
-                                    <p>Location:</p>                     
+                                    <p>Location: </p>                     
                                 </div>
                             </div>
                         </div>
@@ -142,6 +142,7 @@
   
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../script/confirmation.js"></script>
 
 </body>
 </html>
